--- a/index.html
+++ b/index.html
@@ -6,7 +6,18 @@
     <link rel="stylesheet" href="../styles/newyear.css">
 </head>
 <body>
-    <h1>Testing the marriweather</h1>
-    
+    <header class="banner-container">
+        <div class="banner-content">
+            <p>Happy New Year</p>
+            <h1>New Year Party</h1>
+            <h1>Celebration</h1>
+        </div>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>    
 </body>
 </html>
