--- a/index.html
+++ b/index.html
@@ -14,6 +14,19 @@
         </div>
     </header>
     <main>
+        <!-- 65% section starts here -->
+         <section class="second-section-container">
+            <div class="second-section-content">
+                <h1>65% OFF</h1>
+                <p>OUR HOLIDAY DEALS ARE BETTER</p>
+                <h3>ALL CATEGORIES</h3>
+            </div> 
+            <div class="image-container">
+                <img src="./images/new-year-photo.png" alt="new year photo">
+            </div>
+            
+         </section>
+        <!-- 65% section ends here -->
 
     </main>
     <footer>
