--- a/index.html
+++ b/index.html
@@ -23,10 +23,46 @@
             </div> 
             <div class="image-container">
                 <img src="./images/new-year-photo.png" alt="new year photo">
-            </div>
-            
+            </div>  
          </section>
         <!-- 65% section ends here -->
+
+         <!-- midnight party section starts here -->
+          <section class="midnight-party-container">
+            <div class="leftside-content">
+                <div class="leftside-content-div">
+                    <h1>Welcome to <br>midnight party</h1>
+                    <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                    <button>Join now</button>
+                </div>
+            </div>
+            <div class="rightside-content">
+                <div class="rightside-img">
+                    <img src="../images/2024.png" alt="2024">
+                </div>
+            </div>
+          </section>
+          <!-- midnight party section ends here -->
+
+          <!-- holiday section starts -->
+          <section class="holiday-section-container">
+            <div class="holiday-text-content">
+                <h5>WHAT IS FUNCTIONAL</h5>
+                <h1><span id="holiday">Holidays</span> Sale 50%</h1>
+                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed 
+                    molestie malesuada. <br>Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id fermentum amet amet sit consectetur.</p>
+            </div>
+            <div class="solid-color">
+            </div>
+            <div class="giftbox">
+                <img src="../images/giftbox.png" alt="giftbox">
+                <div class="discount">
+                    <img src="../images/discount.png" alt="discount">
+                </div>
+            </div>
+
+          </section>
+          <!-- holiday section ends -->
 
     </main>
     <footer>
